arrow fix on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,23 +425,30 @@ a {
     transform: translateY(25px);
 }
 
-.scroll-up::before {
+.scroll-up__arrow {
+    font-size: 0;
+    color: transparent;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 45%;
+    left: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    font-size: 20px;
-    content: "🠕";
-    font-weight: 700;
+    width: 20%;
+    height: 20%;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    transform: rotate(45deg);
+    content: "";
+    transition: border-color 0.2s linear;
 }
 
 .scroll-up:hover {
-    color: orange;
     box-shadow: inset 0 0 0 3px orange;
+}
+
+.scroll-up:hover .scroll-up__arrow {
+    border-color: orange;
 }
 
 .scroll-up.active {
